<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_24dp">

        <TextView
            android:id="@+id/text_doc_type"
            style="@style/TextView.InputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/document_type" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_doc_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconDrawable="@drawable/ic_dropdown"
            app:endIconMode="custom"
            app:endIconTint="?android:attr/textColor">

            <AutoCompleteTextView
                android:id="@+id/spinner_doc_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Dojah.ParagraphSmall"
                android:hint="@string/select" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_rc_number"
            style="@style/TextView.InputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rc_number" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_rc_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rc_number"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_tin_number"
            style="@style/TextView.InputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tin_number" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_tin_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tin_number"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_biz_name"
            style="@style/TextView.InputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_biz_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/business_name"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/_continue"
            app:iconGravity="textEnd"
            app:iconPadding="11dp" />

        <TextView
            android:id="@+id/policy_tv"
            style="@style/TextAppearance.Dojah.ParagraphSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"
            android:text="@string/policy_term_text"
            android:visibility="gone" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
