<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.Dojah.Header5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:text="@string/preview_your_id" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/camera_preview"
                android:layout_width="match_parent"
                android:layout_height="289dp"
                android:src="@color/card_stroke_color" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_subtitle"
            style="@style/TextAppearance.Dojah.ParagraphSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_18dp"
            android:drawablePadding="@dimen/margin_12dp"
            android:gravity="start"
            android:text="@string/please_review_capture"
            android:textColor="@color/body_color"
            app:drawableStartCompat="@drawable/ic_check" />

        <TextView
            android:id="@+id/text_subtitle2"
            style="@style/TextAppearance.Dojah.ParagraphSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:drawablePadding="@dimen/margin_12dp"
            android:gravity="start"
            android:text="@string/make_sure_visible"
            android:textColor="@color/body_color"
            app:drawableStartCompat="@drawable/ic_check" />

        <TextView
            android:id="@+id/text_subtitle3"
            style="@style/TextAppearance.Dojah.ParagraphSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:drawablePadding="@dimen/margin_12dp"
            android:gravity="start"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/margin_4dp"
            android:text="@string/look_for_obstruction"
            android:textColor="@color/body_color"
            app:drawableStartCompat="@drawable/ic_check" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_retake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:text="@string/retake"
            android:textColor="@color/black"
            app:backgroundTint="@color/card_back_color"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_continue" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>


