<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_bvn"
                style="@style/TextView.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_phone_number" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_bvn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.dojah.sdk_kyc.ui.utils.widget.EditTextSpinner
                    android:id="@+id/layout_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    app:boxStrokeSizeFocused="0.5dp"
                    app:boxStrokeSize="0.5dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.dojah.sdk_kyc.ui.utils.widget.DojahMaterialButton
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/_continue" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>